# engine-template

./: .clang-format  CMakeLists.txt  LICENSE  PLANNING.txt
include/: Config.hpp
include/engine/: AssetManager.hpp  Camera.hpp  Engine.hpp  InputHelper.hpp  Shapes.hpp  Structs.hpp  Swapchain.hpp  Timing.hpp  VulkanContext.hpp  Window.hpp  World.hpp
include/engine/managers/: BufferManager.hpp  ShaderManager.hpp  ShapeManager.hpp  TextureManager.hpp
src/: AssetManager.cpp  AssimpMesh.cpp  Engine.cpp  InputHelper.cpp  Platonics.cpp  Swapchain.cpp  Timing.cpp  VulkanContext.cpp  Window.cpp  World.cpp  main.cpp
src/managers/: BufferManager.cpp  ShaderManager.cpp  ShapeManager.cpp  TextureManager.cpp
src/shaders/: normals.slang  triangle.slang
